Update and rename practical2_V002-2.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="practical2-style_V002-2.css" type="text/css">
+    <link rel="stylesheet" href="index-style_V002-2.css" type="text/css">
     <!--<link rel="stylesheet" href="practical2-style_V002-1.css" type="text/css">-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>practical 2</title>
