--- a/worty-person.html
+++ b/worty-person.html
@@ -12,7 +12,7 @@
 
 <nav>
     <div>
-        <a href="#index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">page2</a>
         <a href="#">page3</a>
     </div>
