--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h2 class="text-content">About Me</h2>
                     <table>
                         <tr>
-                            <td><img src="./images/personal-img.jpg" height="200px" alt="Personal Image"></td>
+                            <td><img src="personal-img.jpg" height="200px" alt="Personal Image"></td>
                             <td>
                                 <p>I am a student at Raffles University.</p>
                                 <p>Pursuing a Bachelor's degree in Information Technology</p>
