functions and styles fix
clearance of documents
fix not working nav functions
update some css styles
update project.html

--- a/project.html
+++ b/project.html
@@ -14,10 +14,22 @@
 <body>
     <header>
         <div class="nav">
-            <a href="./index.html#contact" title="Home">Home</a>
-            <a href="./project.html" title="Project">Project</a>
-            <a href="" title="Contact">Contact</a>
+            <a href="./index.html" title="Home">Home</a>
+            <a href="./project.html" title="Project" class="active">Project</a>
+            <a href="./index.html#contact" title="Contact">Contact</a>
             <a href="" title="Resume">Resume</a>
         </div>
     </header>
+    <div class="section">
+        <div id="about">
+            <h1>Hello, this is Min Yu, a learner...</h1>
+            <p>Explore my projects and learn more about me.</p>
+        </div>
+    </div>
+
+    <hr style="border: 1px solid #000;">
+
+    <footer>
+        <p>© 2025 Loh Min Yu. All rights reserved.</p>
+    </footer>
 </body>
