--- a/index.html
+++ b/index.html
@@ -4,12 +4,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- PRIMARY META TAGS -->
+    <title>Loh Min Yu (Miu) | Software Engineer & Creative Developer Portfolio</title>
+    <meta name="title" content="Loh Min Yu (Miu) | Software Engineer & Creative Developer Portfolio">
     <meta name="description"
-        content="Miu Portfolio - Exploring the intersection of Software Engineering, Game Development, and AI.">
+        content="Portfolio of Loh Min Yu (Miu), a Software Engineer specializing in Python, C++, Three.js, and Game Development. Exploring the intersection of logic, chaos, and AI systems.">
     <meta name="keywords"
-        content="Portfolio, Software Engineer, Web Developer, Three.js, Creative Coding, Miu, Loh Min Yu">
+        content="Loh Min Yu, Miu, Software Engineer, Web Developer, Game Developer, Three.js, Creative Coding, Portfolio, Malaysia, Raffles University, Dissociative Recombination">
     <meta name="author" content="Loh Min Yu">
-    <title>Miu | Terminal</title>
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
+    <meta name="theme-color" content="#050505">
+
+    <!-- OPEN GRAPH / FACEBOOK / LINKEDIN -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://minyuouo.github.io/">
+    <meta property="og:title" content="Loh Min Yu (Miu) | Software Engineer & Creative Developer">
+    <meta property="og:description"
+        content="Portfolio of Loh Min Yu (Miu). Exploring Dissociative Recombination through code, 3D graphics, and software engineering.">
+    <meta property="og:image" content="https://minyuouo.github.io/src/assets/preview-card.png">
+    <meta property="og:site_name" content="Miu Portfolio">
+
+    <!-- TWITTER -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://minyuouo.github.io/">
+    <meta property="twitter:title" content="Loh Min Yu (Miu) | Software Engineer & Creative Developer">
+    <meta property="twitter:description"
+        content="Portfolio of Loh Min Yu (Miu). Exploring Dissociative Recombination through code, 3D graphics, and software engineering.">
+    <meta property="twitter:image" content="https://minyuouo.github.io/src/assets/preview-card.png">
+    <meta property="twitter:creator" content="@loh_min_yu">
+
+    <!-- STRUCTURED DATA (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Loh Min Yu",
+      "alternateName": "Miu",
+      "url": "https://minyuouo.github.io",
+      "image": "https://minyuouo.github.io/src/assets/logo.ico",
+      "sameAs": [
+        "https://www.linkedin.com/in/min-yu-loh-329377345/",
+        "https://github.com/MinYuOuO",
+        "https://www.facebook.com/minyu.loh.1",
+        "https://www.instagram.com/loh_min_yu/"
+      ],
+      "jobTitle": "Student & Software Engineer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Raffles University"
+      },
+      "alumniOf": {
+        "@type": "CollegeOrUniversity",
+        "name": "Raffles University"
+      },
+      "knowsAbout": [
+        "Software Engineering",
+        "Game Development",
+        "Three.js",
+        "Python",
+        "C++",
+        "Web Development",
+        "System Design",
+        "Creative Coding"
+      ],
+      "description": "Software Engineer specializing in Python, C++, and Three.js."
+    }
+    </script>
+
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdn.tailwindcss.com">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
     <!-- Tailwind CSS (CDN for standalone, would use build tool in full prod env) -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -61,15 +129,22 @@
 
     <!-- Three.js Background Canvas -->
     <div id="canvas-container"
-        class="fixed top-0 left-0 w-full h-full -z-10 opacity-100 transition-opacity duration-1000"></div>
+        class="fixed top-0 left-0 w-full h-full -z-10 opacity-100 transition-opacity duration-1000" aria-hidden="true">
+    </div>
 
     <!-- Navigation -->
-    <nav
+    <nav aria-label="Main Navigation"
         class="fixed w-full z-50 top-0 left-0 px-6 py-4 backdrop-blur-md border-b border-white/10 transition-all duration-300">
         <div class="container mx-auto flex justify-between items-center">
             <!-- Brand / Logo -->
-            <a href="#" class="group flex items-center gap-2" onmouseenter="playHoverSound()"
-                onclick="playClickSound()">
+            <a href="#" class="group flex items-center gap-2" onmouseenter="playHoverSound()" onclick="playClickSound()"
+                aria-label="Miu Portfolio Home">
+                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    class="w-8 h-8 group-hover:drop-shadow-[0_0_8px_#00f0ff] transition-all duration-300" role="img"
+                    aria-label="Miu Logo">
+                    <path d="M10 30V10L20 20L30 10V30" stroke="#00f0ff" stroke-width="2" stroke-linecap="square"
+                        stroke-linejoin="round" />
+                </svg>
                 <span
                     class="font-mono font-bold text-xl text-white tracking-tighter group-hover:text-cerenkov transition-colors">&lt;MIU/&gt;</span>
             </a>
@@ -89,7 +164,7 @@
             <!-- Mobile Menu Toggle -->
             <button id="mobile-menu-btn" class="md:hidden text-cerenkov focus:outline-none" aria-label="Toggle Menu"
                 onclick="playClickSound()">
-                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7">
                     </path>
                 </svg>
@@ -134,7 +209,7 @@
             </p>
             <a href="#projects"
                 class="btn-glitch px-8 py-4 font-mono text-cerenkov uppercase text-xs md:text-sm tracking-[0.2em] hover:text-black hover:bg-cerenkov transition-all"
-                onmouseenter="playHoverSound()" onclick="playClickSound()">
+                onmouseenter="playHoverSound()" onclick="playClickSound()" aria-label="Explore Projects">
                 Initialize_Sequence()
             </a>
         </section>
@@ -149,7 +224,7 @@
                         <h3 class="text-2xl font-bold uppercase tracking-wider">The Operator</h3>
                         <div class="h-[1px] bg-white/20 flex-grow ml-4"></div>
                     </div>
-                    <div class="prose text-gray-400 space-y-4 text-sm md:text-base leading-relaxed">
+                    <article class="prose text-gray-400 space-y-4 text-sm md:text-base leading-relaxed">
                         <p>
                             I enjoy <span class="text-white">solving complex problems</span> through disciplined logic
                             and pragmatic design,
@@ -168,25 +243,27 @@
                         <div class="mt-6">
                             <a href="stellarEchoes.html"
                                 class="group inline-flex items-center font-mono text-xs text-cerenkov hover:text-white transition-colors"
-                                onmouseenter="playHoverSound()" onclick="playClickSound()">
+                                onmouseenter="playHoverSound()" onclick="playClickSound()"
+                                aria-label="Enter Stellar Echoes Memory Archive">
                                 <span class="border-b border-cerenkov group-hover:border-white pb-1 tracking-widest">[
                                     ACCESS_STELLAR_ECHOES ]</span>
                                 <svg class="w-3 h-3 ml-2 transform group-hover:translate-x-1 transition-transform"
-                                    fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
                                 </svg>
                             </a>
                         </div>
-                    </div>
+                    </article>
                 </div>
 
                 <!-- Terminal-Style Skill Matrix -->
-                <div class="order-2 bg-white/5 border border-white/10 p-6 rounded-sm backdrop-blur-sm">
+                <div class="order-2 bg-white/5 border border-white/10 p-6 rounded-sm backdrop-blur-sm"
+                    aria-label="Technical Skills Matrix">
                     <div class="flex justify-between items-center mb-6 border-b border-gray-700 pb-2">
                         <h4 class="font-mono text-cerenkov text-sm uppercase tracking-widest">>> SYSTEM_CONFIGURATION
                         </h4>
-                        <div class="flex gap-2">
+                        <div class="flex gap-2" aria-hidden="true">
                             <div class="w-3 h-3 rounded-full bg-dissociation/70"></div>
                             <div class="w-3 h-3 rounded-full bg-yellow-500/50"></div>
                             <div class="w-3 h-3 rounded-full bg-green-500/50"></div>
@@ -259,7 +336,7 @@
             <div class="text-center">
                 <button id="show-more-projects"
                     class="btn-glitch px-6 py-2 font-mono text-xs text-cerenkov uppercase tracking-widest hover:text-black hover:bg-cerenkov transition-all"
-                    onclick="playClickSound()">
+                    onclick="playClickSound()" aria-label="Load All Projects">
                     [LOAD_FULL_DATABASE]
                 </button>
             </div>
@@ -355,20 +432,20 @@
                     </div>
                 </div>
                 <div class="mt-20 text-xs font-mono text-gray-600">
-                    <p>Designed & Built by Loh Min Yu. &copy; 2025.</p>
+                    <p>Designed & Built by Miu. &copy; 2025.</p>
                 </div>
             </div>
         </section>
     </main>
 
     <!-- Details Modal -->
-    <div id="project-modal" class="modal-overlay">
-        <div class="modal-content p-6 md:p-8">
+    <div id="project-modal" class="modal-overlay" aria-hidden="true">
+        <div class="modal-content p-6 md:p-8" role="dialog" aria-modal="true" aria-labelledby="modal-title">
             <div class="scan-line"></div>
             <div class="flex justify-between items-center mb-6 border-b border-white/10 pb-4">
-                <h2 class="text-xl md:text-2xl font-bold text-white font-mono">>> DATA_LOG</h2>
+                <h2 id="modal-title" class="text-xl md:text-2xl font-bold text-white font-mono">>> DATA_LOG</h2>
                 <button id="modal-close" class="text-gray-500 hover:text-dissociation font-mono transition-colors"
-                    onclick="playClickSound()">[CLOSE_X]</button>
+                    onclick="playClickSound()" aria-label="Close Modal">[CLOSE_X]</button>
             </div>
             <div id="modal-body" class="prose prose-invert prose-sm md:prose-base max-w-none mb-8 text-gray-300"></div>
             <div class="flex justify-end">
