Add Google site verification meta tag
Added a Google site verification meta tag to the HTML head for site ownership verification with Google services.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="theme-color" content="#050505">
+    <meta name="google-site-verification" content="JstGcC2RnX7Q5XYUgsGypWEDFPOKI3VO0poAgXUWkK8" />
 
     <!-- OPEN GRAPH / FACEBOOK / LINKEDIN -->
     <meta property="og:type" content="website">
