Update meta tags, add sitemap, and improve touch support
Refined meta tags and descriptions in index.html for improved SEO and clarity. Added sitemap.xml for better search engine indexing. Enhanced stellarEchoes.html with improved touch interaction logic, streamlined CSS keyframes, and minor content and style cleanups.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- PRIMARY META TAGS -->
-    <title>Loh Min Yu (Miu) | Software Engineer & Creative Developer Portfolio</title>
-    <meta name="title" content="Loh Min Yu (Miu) | Software Engineer & Creative Developer Portfolio">
+    <title>Miu | Terminal</title>
+    <meta name="title" content="Loh Min Yu (Miu) | Portfolio">
     <meta name="description"
-        content="Portfolio of Loh Min Yu (Miu), a Software Engineer specializing in Python, C++, Three.js, and Game Development. Exploring the intersection of logic, chaos, and AI systems.">
+        content="Portfolio of Loh Min Yu, a Student specializing in Coding, System Design, and Game Development.">
     <meta name="keywords"
-        content="Loh Min Yu, Miu, Software Engineer, Web Developer, Game Developer, Three.js, Creative Coding, Portfolio, Malaysia, Raffles University, Dissociative Recombination">
+        content="Loh Min Yu, Miu, Student, Web Developer, Creative Coding, Portfolio, Malaysia, Raffles University">
     <meta name="author" content="Loh Min Yu">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -21,18 +21,18 @@
     <!-- OPEN GRAPH / FACEBOOK / LINKEDIN -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://minyuouo.github.io/">
-    <meta property="og:title" content="Loh Min Yu (Miu) | Software Engineer & Creative Developer">
+    <meta property="og:title" content="Loh Min Yu (Miu) | Portfolio">
     <meta property="og:description"
-        content="Portfolio of Loh Min Yu (Miu). Exploring Dissociative Recombination through code, 3D graphics, and software engineering.">
+        content="Portfolio of Loh Min Yu, a Student specializing in Coding, System Design, and Game Development.">
     <meta property="og:image" content="https://minyuouo.github.io/src/assets/preview-card.png">
     <meta property="og:site_name" content="Miu Portfolio">
 
     <!-- TWITTER -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://minyuouo.github.io/">
-    <meta property="twitter:title" content="Loh Min Yu (Miu) | Software Engineer & Creative Developer">
+    <meta property="twitter:title" content="Loh Min Yu (Miu) | Portfolio">
     <meta property="twitter:description"
-        content="Portfolio of Loh Min Yu (Miu). Exploring Dissociative Recombination through code, 3D graphics, and software engineering.">
+        content="Portfolio of Loh Min Yu, a Student specializing in Coding, System Design, and Game Development.">
     <meta property="twitter:image" content="https://minyuouo.github.io/src/assets/preview-card.png">
     <meta property="twitter:creator" content="@loh_min_yu">
 
@@ -140,12 +140,6 @@
             <!-- Brand / Logo -->
             <a href="#" class="group flex items-center gap-2" onmouseenter="playHoverSound()" onclick="playClickSound()"
                 aria-label="Miu Portfolio Home">
-                <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"
-                    class="w-8 h-8 group-hover:drop-shadow-[0_0_8px_#00f0ff] transition-all duration-300" role="img"
-                    aria-label="Miu Logo">
-                    <path d="M10 30V10L20 20L30 10V30" stroke="#00f0ff" stroke-width="2" stroke-linecap="square"
-                        stroke-linejoin="round" />
-                </svg>
                 <span
                     class="font-mono font-bold text-xl text-white tracking-tighter group-hover:text-cerenkov transition-colors">&lt;MIU/&gt;</span>
             </a>
