docs(about, projects): update About section and refine project descriptions
- updated About section content for better clarity and consistency
- edited project descriptions to improve accuracy and presentation

--- a/index.html
+++ b/index.html
@@ -199,13 +199,14 @@
                     <h1 class="text-5xl sm:text-7xl md:text-9xl font-bold mb-4 leading-none glitch-text tracking-tight"
                         data-text="LOH MIN YU">LOH MIN YU</h1>
                 </div>
-                <h2 class="text-lg md:text-3xl text-gray-400 font-light mb-8 font-mono max-w-2xl">
-                    Logic <span class="text-cerenkov px-2">|</span> Creativity <span class="text-cerenkov px-2">|</span>
+                <h2 class="text-lg md:text-3xl text-gray-400 font-light mb-8 font-mono max-w-3xl">
+                    Logic <span class="text-cerenkov px-1">|</span> Creativity <span class="text-cerenkov px-1">|</span>
                     Lifelong Learning
                 </h2>
                 <p class="max-w-xl text-gray-500 leading-relaxed mb-10 text-sm md:text-base">
-                    Bachelor of IT student exploring the intersection of Software Engineering, Game Development, and AI
-                    systems. I craft systems where logic meets chaos.
+                    A Bachelor of Information Technology student focused on the intersection of software engineering,
+                    game development, and artificial intelligence. I build and engineer logical systems to solve complex
+                    problems.
                 </p>
                 <a href="#projects"
                     class="btn-glitch px-8 py-4 font-mono text-cerenkov uppercase text-xs md:text-sm tracking-[0.2em] hover:text-black hover:bg-cerenkov transition-all"
@@ -263,29 +264,30 @@
             <div class="grid md:grid-cols-12 gap-12">
                 <div class="md:col-span-7 space-y-8">
                     <p class="text-xl text-gray-300 font-light leading-relaxed">
-                        I enjoy solving complex problems through <span
-                            class="text-white font-medium border-b border-cerenkov/50">disciplined logic</span> and
-                        <span class="text-white font-medium border-b border-cerenkov/50">pragmatic design</span>,
-                        shaping
-                        systems that are both intentional and resilient.
+                        I thrive on solving complex problems with <span
+                            class="text-white font-medium border-b border-cerenkov/50">pragmatic thinking</span> and
+                        <span class="text-white font-medium border-b border-cerenkov/50">structured logic</span>,
+                        abstracting and implementing real-world solutions.
                     </p>
 
                     <div class="text-gray-400 space-y-6 font-light leading-relaxed">
                         <p>
-                            My work moves fluidly between <span
-                                class="text-white border-b border-gray-600 hover:border-cerenkov transition-colors">software
-                                engineering</span>, <span
-                                class="text-white border-b border-gray-600 hover:border-cerenkov transition-colors">game
-                                worlds</span>, and <span
-                                class="text-white border-b border-gray-600 hover:border-cerenkov transition-colors">intelligent
-                                systems</span>.
+                            I am a reflective person who <span
+                                class="text-white border-b border-gray-600 hover:border-cerenkov transition-colors">learns
+                                from failures</span>, adjusts
+                            strategies, and asks deeper questions—<span
+                                class="text-white border-b border-gray-600 hover:border-cerenkov transition-colors">not
+                                only about how things work, but about how they are built.</span>
                         </p>
                         <p>
-                            My thinking often drifts toward <span class="text-dissociation/80">existential and
-                                nihilistic</span> questions—not to escape meaning, but to construct it with care.
-                            Outside the machine, I find clarity in literature and the quiet <span
-                                class="text-white font-medium">ritual of tea</span>, grounding reflection so creation
-                            remains human.
+                            My interests span both <span class="text-white font-medium">technical and
+                                philosophical</span>
+                            fields. I explore <span class="text-dissociation/80">existential and nihilistic</span>
+                            ideas, and seek to strike a balance between
+                            <span class="text-white font-medium">personal meaning and professional
+                                fulfillment</span>.Outside the machine, I find clarity in literature and the <span
+                                class="text-white font-medium">art of tea</span>, which help me cultivate mindfulness,
+                            patience, and maintain inner clarity.
                         </p>
                     </div>
 
@@ -345,7 +347,8 @@
                                 <div class="grid grid-cols-1 gap-2 text-gray-400">
                                     <span class="hover:text-white transition-colors">- System Design, UML, SDLC</span>
                                     <span class="hover:text-white transition-colors">- FP / OOP Patterns</span>
-                                    <span class="hover:text-white transition-colors">- MVC, DDD Architecture (Learning)</span>
+                                    <span class="hover:text-white transition-colors">- MVC, DDD Architecture
+                                        (Learning)</span>
                                     <span class="hover:text-white transition-colors">- Project Management</span>
                                 </div>
                             </div>
